--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.js"></script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Robot</title>
+  <title>Home Page</title>
   <style>
     html,
     body {
@@ -21,6 +21,7 @@
 
 <body>
   <h1><mark><em>Robot di Daniele Abate</em></mark></h1>
+  <h2><a href="Menu/Menu Daniele Abate.html">Menu</a></h2>
 
   <script>
     function setup() {
