Update Squadra Daniele Abate.html

--- a/Menu/Collegamenti/Squadra Daniele Abate.html
+++ b/Menu/Collegamenti/Squadra Daniele Abate.html
@@ -37,7 +37,7 @@
   </p>
   <h2>Attaccanti</h2>
   <p>
-    <ins><mark>Duván Zapata</mark>, Sam Lammers, <mark>Luis Muriel</mark>, Amad Diallo</ins></h5>
+    <ins><mark>Duván Zapata</mark>, Sam Lammers, <mark>Luis Muriel</mark>, Amad Diallo</ins>
   </p>
 </body>
 
