Ho eliminato gli errori relativi al Menu dei collegamenti

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
   <h1><mark><em>Robot di Daniele Abate</em></mark></h1>
-  <h2><a href="Menu/Menu Daniele Abate.html">Menu</a></h2>
+  <h2><a href="Menu/Menu_Daniele_Abate.html">Menu</a></h2>
 
   <script>
     function setup() {
