Ho rinominato i file dei collegamenti

--- a/Menu/Menu Daniele Abate.html
+++ b/Menu/Menu Daniele Abate.html
@@ -24,35 +24,35 @@
   <p>
     <table style="border: 3px solid red;">
       <tr>
-        <td>Collegamento alla <a href="Collegamenti/Squadra Daniele Abate.html">Formazione dell'Atalanta</a></td>
+        <td>Collegamento alla <a href="Collegamenti/SquadraDanieleAbate.html">Formazione dell'Atalanta</a></td>
       </tr>
     </table>
   </p>
   <p>
     <table style="border: 3px solid green;">
       <tr>
-        <td>Collegamento agli <a href="Collegamenti/Attori Daniele Abate.html">Attori famosi</a></td>
+        <td>Collegamento agli <a href="Collegamenti/AttoriDanieleAbate.html">Attori famosi</a></td>
       </tr>
     </table>
   </p>
   <p>
     <table style="border: 3px solid blue;">
       <tr>
-        <td>Collegamento agli <a href="Collegamenti/Angoli Daniele Abate.html">Angoli</a></td>
+        <td>Collegamento agli <a href="Collegamenti/AngoliDanieleAbate.html">Angoli</a></td>
       </tr>
     </table>
   </p>
   <p>
     <table style="border: 3px solid orange;">
       <tr>
-        <td>Collegamento <a href="Collegamenti/Acchiappa Palline.html">Acchiappa Palline</a></td>
+        <td>Collegamento <a href="Collegamenti/AcchiappaPalline.html">Acchiappa Palline</a></td>
       </tr>
     </table>
   </p>
   <p>
     <table style="border: 3px solid yellow;">
       <tr>
-        <td>Collegamento ai <a href="Collegamenti/Cicli Daniele Abate.html">Cicli JS</a></td>
+        <td>Collegamento ai <a href="Collegamenti/CicliDanieleAbate.html">Cicli JS</a></td>
       </tr>
     </table>
   </p>
